# ASCII-Art-Generator

./: .gitignore  CMakeLists.txt  README.md  cmpNrun.cmd  compile.cmd  run.cmd
src/: Generator.cpp  Pixel.cpp  image.cpp  main.cpp
src/includes/: Generator.h  Pixel.h  image.h  stb_image.h  stb_image_write.h
